Add content and switch to sindle page theme.

--- a/_config.yml
+++ b/_config.yml
@@ -1,55 +1,35 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+---
 
-title: DivSeek Canada
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  The DivSeek Canada Portal is a web-based platform to implement association
-  genetics workflows supporting plant breeding and crop research focusing on
-  large scale plant genetic resources / crop genotype-phenotype data sets whose
-  access is brokered / managed by the project.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://divseek-canada.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  DivSeek-Canada
+port: 4000
+host: 0.0.0.0
+safe: false
 
-# Build settings
-theme: minima
-plugins:
-  - jekyll-feed
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+### site serving configuration ###
+exclude: [CNAME, README.md, .gitignore]
+permalink: /:title ## disables post output
+timezone: null
+lsi: false
+markdown: kramdown
+
+
+### content configuration ###
+title:       "DivSeek Canada Pilot Project"
+keywords:    "DivSeek, Canada, Divseek Canada, Tripal, Docker, Breeding, Crop"
+description: "Scientific project to build a platform for accessing crop-focused data about Canadian plant genetic resources for crop improvement."
+source_link: "https://github.com/DivSeek-Canada/divseek-canada.github.io"
+favicon:     "img/favicon.png"
+touch_icon:  "img/apple-touch-icon.png"
+google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
+
+
+### template colors, used site-wide via css ###
+colors:
+  red:       '#C54F33'
+  black:     '#111111'
+  white:     '#f8f8f8'
+  blue:      '#00AEEF'
+  green:     '#8FC73E'
+
+kramdown:
+  auto_ids:  false
